<resources>
    <string name="app_name">Mega Tetris</string>
    <string name="tetris">TETRIS</string>
    <string name="high_score_only">High score:</string>
    <string name="high_score_default">High score: 0</string>
    <string name="high_score">High score: %1$s</string>
    <string name="new_game">New game</string>
    <string name="reset_score">Reset score</string>
    <string name="exit">exit</string>
    <string name="current_score_only">Current score:</string>
    <string name="current_score">Current score: %1$s</string>
    <string name="btn_restart">Restart</string>
    <string name="high_score_text_landing_screen">HIGH SCORE:</string>
    <string name="null_value_for_start_score">0</string>
    <string name="tetris_logo">TETRIS</string>
    <string name="tetromino">tetraminos</string>
</resources>